--- a/style.css
+++ b/style.css
@@ -180,6 +180,10 @@ p {
 }
 
 .our-collection {
+	margin-bottom: 200px;
+}
+
+.collection-title {
 	width: 1111px;
 	margin: 0 auto;
 	height: 196px;
@@ -200,4 +204,255 @@ p {
 	height: 196px;
 	background: linear-gradient(180deg, rgba(254, 252, 247, 0) 0%, #fefcf7 100%);
 	background-blend-mode: color;
+}
+
+.collection-items {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 30px;
+	margin-top: -55px;
+}
+
+.item-card {
+	z-index: 1;
+}
+
+.item-card img {
+	width: 256px;
+	height: 193px;
+	margin-bottom: 72px;
+}
+
+.card-info {
+	width: 255px;
+	height: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	gap: 24px;
+}
+
+.choose {
+	height: 726px;
+	margin-bottom: 200px;
+}
+
+.choose-container {
+	width: 100%;
+	height: 577px;
+	background-color: #2c343e;
+	border-radius: 10px;
+}
+
+.choose-header {
+	width: 527px;
+	height: auto;
+	margin: 0 auto;
+	text-align: center;
+	padding-top: 100px;
+	padding-bottom: 86px;
+}
+
+.choose-header h2 {
+	color: var(--light-cream);
+	margin-bottom: 32px;
+}
+
+.choose-header p {
+	color: var(--light-cream);
+	opacity: 0.8;
+}
+
+.choose-info {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 30px;
+}
+
+.info-card {
+	width: 350px;
+	height: 382px;
+	text-align: center;
+	background-color: var(--dark-cyan);
+	border-radius: 8px;
+}
+
+.info-card:nth-child(1) img,
+.info-card:nth-child(2) img {
+	margin-top: 72px;
+	margin-bottom: 56px;
+}
+
+.info-card:nth-child(3) img {
+	margin-top: 83px;
+	margin-bottom: 67px;
+}
+
+.info-card h4 {
+	color: var(--light-cream);
+	margin-bottom: 24px;
+}
+
+.info-card p {
+	width: 255px;
+	height: auto;
+	color: var(--light-cream);
+	margin: 0 auto;
+}
+
+.workings {
+	width: 1045px;
+	height: auto;
+	margin-left: 85px;
+	margin-bottom: 64px;
+}
+
+.workings h4 {
+	color: var(--grey);
+	margin-bottom: 80px;
+}
+
+.workings-divider {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	margin-bottom: 67px;
+}
+
+.workings-divider .oval {
+	z-index: 1;
+}
+
+.workings-divider .oval:not(:nth-child(3)) {
+	margin-right: 349px;
+}
+
+.workings-divider .line {
+	position: absolute;
+	z-index: 0;
+}
+
+.workings-info {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 95px;
+}
+
+.info-sec {
+	width: 285px;
+	height: 355px;
+}
+
+.info-sec h1 {
+	color: var(--pale-orange);
+	margin-bottom: 38px;
+}
+
+.info-sec h3 {
+	width: 255px;
+	margin-bottom: 42px;
+}
+
+.create-button {
+	width: 217px;
+	height: 56px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--dark-cyan);
+	border-radius: 6px;
+	color: var(--light-cream);
+	text-align: center;
+	font-family: 'Fraunces', serif;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 900;
+	line-height: 25px;
+	margin-left: 85px;
+	margin-bottom: 200px;
+	text-decoration: none;
+}
+
+.create-button:hover {
+	background-color: #66d2cf;
+}
+
+.footer {
+	width: 100%;
+	height: 120px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 88px;
+	padding: 0 85px;
+	background-color: #2c343e;
+}
+
+.footer-content {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 102px;
+}
+
+.footer-logo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+}
+
+.footer-logo img {
+	width: 236px;
+	height: 26px;
+}
+
+.footer-links {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 33px;
+}
+
+.footer-links li {
+	list-style: none;
+}
+
+.footer-links li a {
+	color: var(--grey);
+	font-size: 12px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 15px;
+	letter-spacing: 0.923px;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+.footer-links li a:hover {
+	color: var(--light-cream);
+}
+
+.footer-icons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 24px;
+}
+
+.footer-icons a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.footer-icons a svg:hover path {
+	fill: var(--pale-orange);
 }
